# reo

./: .gitignore  .markdownlint.json  .rultor.yml  Cargo.toml  Makefile  README.md  REUSE.toml  _typos.toml  a.relf  build.rs  log  test-pom.xml
.github/workflows/: actionlint.yml  cargo.yml  checkmake.yml  copyrights.yml  markdown-lint.yml  pdd.yml  reuse.yml  tarpaulin.yml  typos.yml  xcop.yml  yamllint.yml
eo-tests/org/eolang/reo/: fibonacci.eo  fibonacci.eo.later  fibonacci.eo.off
eo-tests/org/eolang/reo/simple/: arithmetic.eo  arithmetic.eo.off  naive.eo  rho.eo  sum.eo
gmi-tests/: algo.gmi  primitive.gmi
quick-errors/: 01-missing-argument.sodg  02-data-overwriting.sodg
quick-tests/: 01-self-ref.sodg  02-self-is-attribute.sodg  03-copy-of-attribute.sodg  04-decorator.sodg  05-simple-phi.sodg  06-copy-of.sodg  07-long-phi.sodg  08-copy-of-inc.sodg  09-copy-of-copy.sodg  10-apply-respects-data.sodg  11-times-of-inc.sodg  12-copy-of-ref.sodg  13-simple-const.sodg  14-times-of-alpha.sodg  15-copy-of-abstract.sodg  16-copy-inside.sodg  _10-times-of-inc.sodg  _11-times-of-inc.sodg  _16-copy-inside.sodg  _inc.sodg  copy-of-attribute.sodg  copy-of-inc.sodg  copy-of.sodg  decorator.sodg  self-is-attribute.sodg  self-ref.sodg
sodg-tests/: algo.g  algo.sodg  primitive.g  primitive.sodg
src/: compile.rs  data.rs  dataize.rs  gmi.rs  lib.rs  macros.rs  scripts.rs  setup.rs  universe.rs  xmir.rs
src/org/: mod.rs
src/org/eolang/: array.rs  int.rs  mod.rs
src/universe/: dataize.rs  graph.rs  i_add.rs  i_atom.rs  i_bind.rs  i_copy.rs  i_data.rs  inconsistencies.rs  inspect.rs  serialization.rs
surge-make/: Makefile  doc.tex
tests/: basic_test.rs  compile_test.rs  dataize_test.rs  deploy_test.rs  dot_test.rs  empty_test.rs  eo_test.rs  gmi_test.rs  inspect_test.rs  link_test.rs  link_tests.rs  merge_test.rs  misc_test.rs  quick_test.rs  reo_test.rs  runtime.rs  snippets_test.rs  sodg_test.rs
tests/common/: compiler.rs  mod.rs  runtime.rs
