[package]
name = "reo"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/objectionary/reo"
description = "Transpiler of EO programs to Rust functions"
readme = "README.md"
license-file = "LICENSE.txt"
homepage = "https://github.com/objectionary/reo"
keywords = ["eolang", "compiler", "oop"]
categories = ["command-line-utilities", "development-tools", "virtualization"]

[dependencies]
anyhow = "1.0.69"
regex = "1.7.1"
lazy_static = "1.4.0"
log = "0.4.17"
clap = { version = "3.2.23", features = ["cargo"] }
simple_logger = "2.3.0"
ctor = "0.1.23"
itertools = "0.10.5"
glob = "0.3.0"
sodg = {path = "/code/o/sodg", features = ["sober"]}
filetime = "0.2.20"
predicates = "2.1.5"
fsutils = "0.1.7"

[dev-dependencies]
assert_cmd = "2.0.4"
tempfile = "3.3.0"
rand = "0.8.5"
