[package]
name = "reo"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/objectionary/reo"
description = "Graph-Based Virtual Machine for EO Programs"
readme = "README.md"
license-file = "LICENSE.txt"
homepage = "https://github.com/objectionary/reo"
keywords = ["eolang", "compiler", "oop"]
categories = ["command-line-utilities", "development-tools", "virtualization"]

[dependencies]
anyhow = "1.0.70"
clap = { version = "3.2.23", features = ["cargo"] }
colored = "2.0.0"
ctor = "0.2.2"
filetime = "0.2.21"
fsutils = "0.1.7"
glob = "0.3.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.18"
predicates = "3.0.1"
regex = "1.7.2"
serial_test = "0.4.0"
sodg = {version = "0.0.32", features = ["sober"]}
#sodg = {path = "/code/o/sodg", features = ["sober"]}
simple_logger = "4.3.0"

[dev-dependencies]
assert_cmd = "2.0.12"
rand = "0.8.5"
tempfile = "3.10.1"
