[package]
name = "reo"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/objectionary/reo"
description = "Graph-Based Virtual Machine for EO Programs"
readme = "README.md"
license-file = "LICENSE.txt"
homepage = "https://github.com/objectionary/reo"
keywords = ["eolang", "compiler", "oop"]
categories = ["command-line-utilities", "development-tools", "virtualization"]

[dependencies]
anyhow = "1.0.80"
clap = { version = "3.2.25", features = ["cargo"] }
colored = "2.1.0"
ctor = "0.2.7"
filetime = "0.2.23"
fsutils = "0.1.7"
glob = "0.3.1"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.21"
predicates = "3.1.0"
regex = "1.10.4"
serial_test = "3.1.1"
sodg = {version = "0.0.32", features = ["sober"]}
#sodg = {path = "/code/o/sodg", features = ["sober"]}
simple_logger = "4.3.3"

[dev-dependencies]
assert_cmd = "2.0.14"
rand = "0.8.5"
tempfile = "3.4.0"
